syntax = "proto3";

option csharp_namespace = "Lab2Server";

package employee;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service EmployeeService {
  rpc ListEmployees(google.protobuf.Empty) returns (ListReply);
  rpc GetEmployee(GetEmployeeRequest) returns (EmployeeReply);
  rpc CreateEmployee(CreateEmployeeRequest) returns (EmployeeReply);
  rpc UpdateEmployee(UpdateEmployeeRequest) returns (EmployeeReply);
  rpc DeleteEmployee(DeleteEmployeeRequest) returns (EmployeeReply);
}
 
message CreateEmployeeRequest{
  string firstName = 1;
  string lastName = 2;
  google.protobuf.Timestamp dateOfEmployment = 3;
}
 
message GetEmployeeRequest{
  int32 id =1;
}
 
message UpdateEmployeeRequest{
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  google.protobuf.Timestamp dateOfEmployment = 4;
}
 
message DeleteEmployeeRequest{
  int32 id =1;
}
 
message ListReply{
  repeated EmployeeReply Employees = 1;
}
 
message EmployeeReply{
  int32 employeeId = 1;
  string firstName = 2;
  string lastName = 3;
  google.protobuf.Timestamp dateOfEmployment = 4;
}